<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.details.CoinInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/imageView_coin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Full name" />

            <ImageView
                android:id="@+id/imageView_coin"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView_name"
                app:layout_constraintTop_toTopOf="@id/textView_name" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_name_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="textView_name, imageView_coin" />

            <TextView
                android:id="@+id/textView_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/symbol"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/barrier_name_image" />

            <TextView
                android:id="@+id/textView_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/algorithm"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/textView_symbol" />

            <TextView
                android:id="@+id/textView_proof_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/proof_type"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/textView_algorithm" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/description"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/textView_proof_type" />

            <ProgressBar
                android:id="@+id/loader_price"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_description" />

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/textView_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>