<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.CoinHistoryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_history_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/currency_value_history"
                app:layout_constraintTop_toTopOf="parent" />


            <com.example.cryptocurrencytracker.utils.graph.GraphView
                android:id="@+id/graphView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/textView_history_label" />

            <ProgressBar
                android:visibility="visible"
                android:id="@+id/loader_graph"
                android:layout_width="100dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/graphView"
                app:layout_constraintEnd_toEndOf="@id/graphView"
                app:layout_constraintStart_toStartOf="@id/graphView"
                app:layout_constraintTop_toTopOf="@id/graphView" />

            <TextView
                android:id="@+id/textView_value_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/graphView"
                app:layout_constraintTop_toTopOf="@id/graphView"
                tools:text="0.683" />

            <TextView
                android:id="@+id/textView_value_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/graphView"
                app:layout_constraintStart_toStartOf="@id/graphView"
                tools:text="0.624" />

            <TextView
                android:id="@+id/textView_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/graphView"
                app:layout_constraintTop_toBottomOf="@id/graphView" />

            <TextView
                android:id="@+id/textView_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/graphView"
                app:layout_constraintTop_toBottomOf="@id/graphView" />

            <Button
                android:id="@+id/button_load_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_load_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_time_start" />

            <TextView
                android:id="@+id/textview_select_type_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/select_type_label"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/numberPicker_type"
                app:layout_constraintEnd_toStartOf="@id/numberPicker_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/numberPicker_type" />

            <NumberPicker
                android:id="@+id/numberPicker_type"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_load_data" />

            <TextView
                android:id="@+id/textview_select_limit_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/select_limit_label"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/numberPicker_limit"
                app:layout_constraintEnd_toStartOf="@id/numberPicker_limit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/numberPicker_limit" />


            <NumberPicker
                android:id="@+id/numberPicker_limit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberPicker_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>